--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-react": "^7.31.8",
+    "prettier": "^2.7.1",
     "typescript": "4.8.3"
   }
 }
