--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tests": "yarn run jest"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -14,14 +15,22 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.18.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.0.3",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
+    "babel-jest": "^29.0.3",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-plugin-react": "^7.31.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.0.3",
     "prettier": "^2.7.1",
     "typescript": "4.8.3"
   }
