--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.0.3",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
     "typescript": "4.8.3"
   }
 }
